# PigLatin

./: README.md
Haskell/: PigLatin.cabal
Haskell/app/: Lexer.hs  Main.hs  Pigifier.hs  Tokens.hs
Rust/: Cargo.toml
Rust/src/: lexer.rs  main.rs  pigifier.rs  tokens.rs
